# similar-files

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  similarFiles.pro
utils/: directoryscanner.cpp  directoryscanner.h
